--- a/hazelnut-popl17.tex
+++ b/hazelnut-popl17.tex
@@ -70,7 +70,7 @@ basicstyle=\ttfamily\fontsize{8pt}{1em}\selectfont}
 \usepackage{enumitem}
 \makeatletter
 \def\thm@space@setup{%
-  \thm@preskip=4px plus 1cm minus 2px
+  \thm@preskip=4px plus 2px minus 2px
   \thm@postskip=\thm@preskip % or whatever, if you don't want them to be equal
 }
 \makeatother
