--- a/formally.tex
+++ b/formally.tex
@@ -514,11 +514,10 @@ The bidirectional action semantics includes a subsumption rule similar to the su
 \end{equation}
 In other words, if the cursor erasure of the edit state synthesizes a type, then we defer to the synthetic action judgement, as long as the type of the resulting cursor erasure is consistent with the type provided for analysis. It is easy to see that this satisfies Theorem 1 by applying the IH and the Rule (\ref{rule:ana-subsume}).
 
-We need to make some exceptions in this rule to maintain determinism, because the analytic action semantics handles certain actions explicitly, in a manner that does not coincide with how the synthetic action semantics would handle these cases if allowed to do so via action subsumption. We will see why this is the case in Sec. \ref{sec:construction}. We do so by defining a finite set of actions $\mathcal{A}$ that do not go through subsumption:
+We need to make some exceptions in this rule to maintain determinism, because the analytic action semantics handles certain actions explicitly, in a manner that does not coincide with how the synthetic action semantics would handle these cases if allowed to do so via action subsumption. We will see why this is the case in Sec. \ref{sec:construction}. We do so by defining a finite set of actions $\mathcal{A}$ that do not need to go through subsumption:
 \[
 \mathcal{A} \overset{\tiny\textit{def}}{=} \{\aConstruct{\fasc}, \aConstruct{\flam{x}}\}
 \]
-
 Algorithmically, this captures the notion that subsumption should be the case of last resort.
 
 \subsubsection{Relative Movement}\label{sec:movement} 
