--- a/sumtypes.tex
+++ b/sumtypes.tex
@@ -197,11 +197,11 @@
       {      {\tsum{\zwsel{\htau_1}}{\htau_2}}}
       {\aMove{\dNext}}
       {      {\tsum{{\htau_1}}{\zwsel{\htau_2}}}}
-  \\
-  \TABperformMove
-      {      {\tsum{{\htau_1}}{\zwsel{\htau_2}}}}
-      {\aMove{\dPrev}}
-      {      {\tsum{\zwsel{\htau_1}}{\htau_2}}}
+  %%\\
+  %% \TABperformMove
+  %%     {      {\tsum{{\htau_1}}{\zwsel{\htau_2}}}}
+  %%     {\aMove{\dPrev}}
+  %%     {      {\tsum{\zwsel{\htau_1}}{\htau_2}}}
   \\
   \TABperformMove
       {      {\tsum{\zwsel{\htau_1}}{\htau_2}}}
@@ -237,16 +237,16 @@
       {      {\hcase{{\hexp}}{x}{\zwsel{\hexp_1}}{y}{\hexp_2}}}
       {\aMove{\dNext}}
       {      {\hcase{{\hexp}}{x}{{\hexp_1}}{y}{\zwsel{\hexp_2}}}}
-  \\
-  \TABperformMove
-      {      {\hcase{{\hexp}}{x}{{\hexp_1}}{y}{\zwsel{\hexp_2}}}}
-      {\aMove{\dPrev}}
-      {      {\hcase{{\hexp}}{x}{\zwsel{\hexp_1}}{y}{\hexp_2}}}
-  \\
-  \TABperformMove
-      {      {\hcase{{\hexp}}{x}{\zwsel{\hexp_1}}{y}{\hexp_2}}}
-      {\aMove{\dPrev}}
-      {      {\hcase{{\zwsel{\hexp}}}{x}{{\hexp_1}}{y}{{\hexp_2}}}}
+  %% \\
+  %% \TABperformMove
+  %%     {      {\hcase{{\hexp}}{x}{{\hexp_1}}{y}{\zwsel{\hexp_2}}}}
+  %%     {\aMove{\dPrev}}
+  %%     {      {\hcase{{\hexp}}{x}{\zwsel{\hexp_1}}{y}{\hexp_2}}}
+  %% \\
+  %% \TABperformMove
+  %%     {      {\hcase{{\hexp}}{x}{\zwsel{\hexp_1}}{y}{\hexp_2}}}
+  %%     {\aMove{\dPrev}}
+  %%     {      {\hcase{{\zwsel{\hexp}}}{x}{{\hexp_1}}{y}{{\hexp_2}}}}
   \\
   \TABperformMove
       {      {\hcase{\zwsel{\hexp}}{x}{\hexp_1}{y}{\hexp_2}}}
