sec 3.3 finally done sans minor todos

--- a/macros.tex
+++ b/macros.tex
@@ -98,7 +98,7 @@
 \newcommand{\fnumlit}[1]{\mathtt{lit}~#1}
 \newcommand{\fplus}{\mathtt{plus}}
 \newcommand{\fhole}{\mathtt{hole}}
-\newcommand{\fnehole}{\mathtt{hole}}
+\newcommand{\fnehole}{\mathtt{nehole}}
 
 \newcommand{\finj}[1]{\mathtt{inj}~#1}
 \newcommand{\fcase}[2]{\mathtt{case}~#1~#2}
