--- a/formally.tex
+++ b/formally.tex
@@ -401,7 +401,6 @@ The expression action judgements obey the following \emph{action sensibility} th
 \end{theorem}
 \noindent In other words, if an edit state (i.e. a Z-expression) is statically meaningful, i.e. its cursor erasure is well-typed, then performing an action on it leaves the resulting edit state statically meaningful. In particular, the first clause of Theorem \ref{thrm:actsafe} establishes that when an action is performed on an edit state whose cursor erasure synthesizes an H-type, the result is an edit state whose cursor erasure also synthesizes some (possibly different) H-type. The second clause establishes that when an action is performed using the analytic action judgement on an edit state whose cursor erasure analyzes against some H-type, the result is a Z-expression whose cursor erasure also analyzes against the same H-type. % Non-empty holes allow us to avoid top-down program construction becau but rather can construct fragments of the program inside a hole until ready to ``expose'' them to type analysis.
 
-The top-level sequence of actions in Figures \ref{fig:first-example} and \ref{fig:second-example} begin with an empty hole, so the derivation of each edit step must conclude with the synthetic action judgement. The analytic action judgement and the type action judgement appear as premises in the derivations of some of these steps.
 
 \begin{figure}[t]
 \hspace{-3px}$\arraycolsep=3pt\begin{array}{llcllll}
@@ -512,20 +511,18 @@ The bidirectional action semantics includes a subsumption rule similar to the su
     \performAna{\hGamma}{\zexp}{\htau}{\alpha}{\zexp'}
   }
 \end{equation}
-In other words, if the cursor erasure of the edit state synthesizes a type, then we defer to the synthetic action judgement, as long as the type of the resulting cursor erasure is consistent with the type provided for analysis. 
+In other words, if the cursor erasure of the edit state synthesizes a type, then we defer to the synthetic action judgement, as long as the type of the resulting cursor erasure is consistent with the type provided for analysis.  The case involving Rule (\ref{rule:action-subsume}) in the proof of Theorem \ref{thrm:actsafe} goes through by induction and static subsumption, i.e. Rule (\ref{rule:ana-subsume}).
 
 We need to make some exceptions in this rule to maintain determinism, because certain construction actions, described in Sec. \ref{sec:construction}, behave slightly differently depending on whether a type is known. We do so by defining a simple judgement $\alpha~\mathsf{subsumes}$ that excludes these action forms:\todo{put into supp}
-\begin{mathpar}
+\begin{equation}\label{rule:subsumes}
 \inferrule{
   \alpha \neq \aConstruct{\fasc}\\
   (\forall x) \alpha \neq \aConstruct{\flam{x}} 
 }{
   \alpha~\mathsf{subsumes}
 }
-\end{mathpar}
+\end{equation}
 Algorithmically, this captures the notion that subsumption should be the case of last resort.
-
-The case involving Rule (\ref{rule:action-subsume}) in the proof of Theorem \ref{thrm:actsafe} goes through by induction and static subsumption, i.e. Rule (\ref{rule:ana-subsume}).
 
 \subsubsection{Relative Movement}\label{sec:movement} 
 The rules below define relative movement within Z-types. They should be self-explanatory:
@@ -843,7 +840,7 @@ The expression movement judgement is defined as follows.
 % \end{equation}
 
 
-\paragraph{Lambda}
+\paragraph{Lambda}\vspace{-3px}
 \begin{equation}\label{r:movefirstchild-lam}
 \inferrule{ }{
   \performMove{
@@ -866,7 +863,7 @@ The expression movement judgement is defined as follows.
     }
   }
 \end{equation}
-\paragraph{Application}
+\paragraph{Application}\vspace{-5px}
 \begin{equation}
   \inferrule{ }{
     \performMove{
@@ -1020,6 +1017,20 @@ Another useful check is to establish \emph{reachability}, i.e. that it is possib
 
 This requires developing machinery for reasoning about sequences of actions. There are two possibilities: we can either add a sequencing action, $\alpha; \alpha$, directly to the syntax of actions, or we can define a syntax for lists of actions, $\bar{\alpha}$, together with iterated action judgements. To keep the core of the action semantics small, we take the latter approach in Figure \ref{fig:multistep}.\todo{put stars on these?}
 
+
+A simple auxiliary judgement, $\bar\alpha~\mathsf{movements}$, defined in the supplement, establishes that $\bar\alpha$ consists only of actions of the form $\aMove{\delta}$.\todo{define this in supplement}
+
+With these definitions, we can state reachability as follows:
+
+\begin{theorem}[Reachability]\label{thrm:reachability} ~
+\begin{enumerate}[itemsep=0px,partopsep=0px,topsep=0px]
+\item If $\removeSel{\ztau}=\removeSel{\ztau'}$ then there exists some $\bar\alpha$ such that $\bar{\alpha}~\mathsf{movements}$ and $\performTyp{\ztau}{\bar\alpha}{\ztau'}$.
+\item If $\hana{\hGamma}{\removeSel{\zexp}}{\htau}$ and $\removeSel{\zexp}=\removeSel{\zexp'}$ then there exists some $\bar{\alpha}$ such that $\bar{\alpha}~\mathsf{movements}$ and $\performAna{\hGamma}{\zexp}{\htau}{\bar{\alpha}}{\zexp'}$. 
+\item If $\hsyn{\hGamma}{\removeSel{\zexp}}{\htau}$ and $\removeSel{\zexp}=\removeSel{\zexp'}$ then there exists some $\bar{\alpha}$ such that $\bar{\alpha}~\mathsf{movements}$ and $\performSyn{\hGamma}{\zexp}{\htau}{\bar\alpha}{\zexp'}{\htau}$.
+\end{enumerate}
+\end{theorem}
+
+
 \begin{figure}
 $\mathsf{ActionList}$~~$\bar{\alpha} ::= \cdot ~\vert~ \alpha; \bar{\alpha}$\vspace{4px}\\
 \fbox{$\performTyp{\ztau}{\bar{\alpha}}{\ztau'}$}
@@ -1064,18 +1075,6 @@ $\mathsf{ActionList}$~~$\bar{\alpha} ::= \cdot ~\vert~ \alpha; \bar{\alpha}$\vsp
 \caption{Iterated Action Judgements}
 \label{fig:multistep}
 \end{figure}
-
-A simple auxiliary judgement, $\bar\alpha~\mathsf{movements}$, defined in the supplement, establishes that $\bar\alpha$ consists only of actions of the form $\aMove{\delta}$.\todo{define this in supplement}
-
-With these definitions, we can state reachability as follows:
-
-\begin{theorem}[Reachability]\label{thrm:reachability} ~
-\begin{enumerate}[itemsep=0px,partopsep=0px,topsep=0px]
-\item If $\removeSel{\ztau}=\removeSel{\ztau'}$ then there exists some $\bar\alpha$ such that $\bar{\alpha}~\mathsf{movements}$ and $\performTyp{\ztau}{\bar\alpha}{\ztau'}$.
-\item If $\hana{\hGamma}{\removeSel{\zexp}}{\htau}$ and $\removeSel{\zexp}=\removeSel{\zexp'}$ then there exists some $\bar{\alpha}$ such that $\bar{\alpha}~\mathsf{movements}$ and $\performAna{\hGamma}{\zexp}{\htau}{\bar{\alpha}}{\zexp'}$. 
-\item If $\hsyn{\hGamma}{\removeSel{\zexp}}{\htau}$ and $\removeSel{\zexp}=\removeSel{\zexp'}$ then there exists some $\bar{\alpha}$ such that $\bar{\alpha}~\mathsf{movements}$ and $\performSyn{\hGamma}{\zexp}{\htau}{\bar\alpha}{\zexp'}{\htau}$.
-\end{enumerate}
-\end{theorem}
 
 The simplest way to prove Theorem \ref{thrm:reachability} is to  break it into two lemmas. Lemma \ref{lemma:reach-up} establishes that you can always move the cursor to the outermost position in an expression. This serves as a check on our $\aMove{\dParent}$ rules.
 \begin{lemma}[Reach Up]\label{lemma:reach-up} ~
@@ -1195,7 +1194,7 @@ Deletion within a Z-expression is similarly straightforward:
 
 \subsubsection{Construction}\label{sec:construction} The construction actions, $\aConstruct{\psi}$, are used to construct terms of a shape indicated by $\psi$ at the cursor.
 
-Again, let us begin with type actions. The $\aConstruct{\farr}$ action constructs an arrow type. The H-type under the cursor becomes the argument type, and the cursor is placed on an empty return type hole:
+\paragraph{Types} The $\aConstruct{\farr}$ action constructs an arrow type. The H-type under the cursor becomes the argument type, and the cursor is placed on an empty return type hole:
 \begin{subequations}
   \begin{equation}
     \label{r:contarr}
@@ -1257,22 +1256,22 @@ The $\aConstruct{\fnum}$ action replaces an empty type hole under the cursor wit
 
 \begin{subequations}
 
-Moving on to expression actions, we start to see some more interesting rules. The $\aConstruct{\fasc}$ action operates differently depending on whether the H-expression under the cursor synthesizes a type or is being analyzed against a type. In the first case, the ascribed type is the synthesized type:
+\paragraph{Ascription} Moving on to expression actions, we start to see some more interesting rules. The $\aConstruct{\fasc}$ action operates differently depending on whether the H-expression under the cursor synthesizes a type or is being analyzed against a type. In the first case, the synthesized type appears in the ascription:
 \begin{equation}
   \label{r:constructasc}
   \inferrule{ }{
     \performSyn{\hGamma}{\zwsel{\hexp}}{\htau}{\aConstruct{\fasc}}{\hexp : \zwsel{\htau}}{\htau}
   }
 \end{equation}
-In the second case, the ascribed type is the provided type:
+In the second case, the type provided for analysis appears in the ascription:
 \begin{equation}
   \inferrule{ }{
     \performAna{\hGamma}{\zwsel{\hexp}}{\htau}{\aConstruct{\fasc}}{\hexp : \zwsel{\htau}}
   }
 \end{equation}
-This rule should supercede the subsumption rule, so we must list $\aConstruct{\fasc}$ in $\mathcal{A}$.
+This rule should supercede the subsumption rule, so we excluded $\aConstruct{\fasc}$ from subsumption in Rule (\ref{rule:subsumes}).
 
-The $\aConstruct{\fvar{x}}$ action places the variable $x$ into an empty hole. If that hole is being asked to synthesize a type, then the result synthesizes the hypothesized type:
+\paragraph{Variables} The $\aConstruct{\fvar{x}}$ action places the variable $x$ into an empty hole. If that hole is being asked to synthesize a type, then the result synthesizes the hypothesized type:
 \begin{equation}
   \label{r:conevar}
   \inferrule{ }{
@@ -1290,7 +1289,7 @@ If the hole is being analyzed against a type that is consistent with the hypothe
 \end{equation}
 The rule above featured on Line 15 of Figure \ref{fig:second-example}.
 
-The $\aConstruct{\flam{x}}$ action places a lambda term binding $x$ into an empty hole. If the focused empty hole is being asked to synthesize a type, then the result of the action is a lambda ascribed the type $\tarr{\tehole}{\tehole}$, with the focus in the argument type position:
+\paragraph{Lambdas} The $\aConstruct{\flam{x}}$ action places a lambda abstraction binding $x$ into an empty hole. If the empty hole is being asked to synthesize a type, then the result of the action is a lambda ascribed the type $\tarr{\tehole}{\tehole}$, with the cursor on the argument type hole:
 \begin{equation}
   \label{r:conelamhole}
   \inferrule{ }{
@@ -1303,22 +1302,23 @@ The $\aConstruct{\flam{x}}$ action places a lambda term binding $x$ into an empt
       {\tarr{\tehole}{\tehole}}
   }
 \end{equation}
-The type ascription is necessary because lambda expressions do not synthesize a type. If the focused empty hole is being analyzed against an arrow type, then no ascription is necessary:
+The type ascription is necessary because lambda expressions do not synthesize a type. If the focused empty hole is being analyzed against a type with matched arrow type, then no ascription is necessary:\todo{supp}
 \begin{equation}
-  \inferrule{ }{
+  \inferrule{
+    \arrmatch{\htau}{\tarr{\htau_1}{\htau_2}}
+  }{
     \performAna
       {\hGamma}
       {\zwsel{\hehole}}
-      {\tarr{\htau_1}{\htau_2}}
+      {\htau}
       {\aConstruct{\flam{x}}}
       {\hlam{x}{\zwsel{\hehole}}}
   }
 \end{equation}
+Because the ascription is omitted here but included in Rule (\ref{r:conelamhole}), we must exclude all $\aConstruct{\flam{x}}$ actions from subsumption in Rule (\ref{rule:subsumes}).
 
-If the focused empty hole is being analyzed against a type that is
-incompatible with any arrow type, expressed in the premise as an arrow with
-two holes, then a lambda ascribed the type $\tarr{\tehole}{\tehole}$
-is inserted inside a hole, to maintain Theorem \ref{thrm:actsafe}:
+Finally, if the empty hole is being analyzed against a type that has no matched arrow type, expressed in the premise as inconsistency with $\tarr{\tehole}{\tehole}$, then a lambda ascribed the type $\tarr{\tehole}{\tehole}$
+is inserted inside a hole, which defers the type inconsistency as previously discussed:\todo{supp}
 \begin{equation}
   \inferrule{
     \tincompat{\htau}{\tarr{\tehole}{\tehole}}
@@ -1334,34 +1334,22 @@ is inserted inside a hole, to maintain Theorem \ref{thrm:actsafe}:
   }
 \end{equation}
 
-The $\aConstruct{\fap}$ action applies the expression in focus to a hole. If the focused expression synthesizes a function type, then the rule is straightforward:
+\paragraph{Application} The $\aConstruct{\fap}$ action applies the expression under the cursor. The following rule handles the case where the synthesized type has matched function type:\todo{supp}
 \begin{equation}
   \label{r:coneapfn}
-  \inferrule{ }{
+  \inferrule{
+    \arrmatch{\htau}{\tarr{\htau_1}{\htau_2}}
+  }{
     \performSyn
       {\hGamma}
       {\zwsel{\hexp}}
-      {\tarr{\htau_1}{\htau_2}}
+      {\htau}
       {\aConstruct{\fap}}
       {\hap{\hexp}{\zwsel{\hehole}}}
       {\htau_2}
   }
 \end{equation}
-
-If the focused expression synthesizes a hole type, then we can treat it as if it synthesized the $\tarr{\tehole}{\tehole}$ type, exactly as described in Sec. \ref{sec:holes}:
-\begin{equation}
-  \inferrule{ }{
-    \performSyn
-      {\hGamma}
-      {\zwsel{\hexp}}
-      {\tehole}
-      {\aConstruct{\fap}}
-      {\hap{\hexp}{\zwsel{\hehole}}}
-      {\tehole}
-  }
-\end{equation}
-
-Finally, if the focused expression synthesizes a type that is incompatible with an arrow type, then we must place that expression inside a hole to maintain Theorem \ref{sec:holes}:
+If the expression under the cursor synthesizes a type that is inconsistent with an arrow type, then we must place that expression inside a hole to maintain Theorem \ref{sec:holes}:
 \begin{equation}
   \inferrule{
     \tincompat{\htau}{\tarr{\tehole}{\tehole}}
@@ -1376,7 +1364,7 @@ Finally, if the focused expression synthesizes a type that is incompatible with 
   }
 \end{equation}
 
-The $\aConstruct{\farg}$ action places the focused expression instead in the argument position of an application. Because the function position is always an empty hole in this situation, we only need a single rule:
+The $\aConstruct{\farg}$ action instead places the expression under the cursor in the argument position of an application form. Because the function position is always an empty hole in this situation, we need only a single rule:
 \begin{equation}
   \inferrule{ }{
     \performSyn
@@ -1389,7 +1377,7 @@ The $\aConstruct{\farg}$ action places the focused expression instead in the arg
   }
 \end{equation}
 
-The $\aConstruct{\fnumlit{n}}$ action places the number expression $\hnum{n}$ into an empty hole. If the focused hole is being asked to synthesize a type, then the rule is straightforward:
+\paragraph{Numbers} The $\aConstruct{\fnumlit{n}}$ action replaces an empty hole with the number expression $\hnum{n}$. If the empty hole is being asked to synthesize a type, then the rule is straightforward:
 \begin{equation}
   \label{r:conenumnum}
   \inferrule{ }{
@@ -1402,7 +1390,7 @@ The $\aConstruct{\fnumlit{n}}$ action places the number expression $\hnum{n}$ in
       {\tnum}
   }
 \end{equation}
-If the focused hole is being analyzed against a type that is incompatible with $\tnum$, then we must place the number expression inside a hole:
+If the empty hole is being analyzed against a type that is incompatible with $\tnum$, then we must place the number expression inside the hole:
 \begin{equation}
   \inferrule{
     \tincompat{\htau}{\tnum}
@@ -1416,7 +1404,7 @@ If the focused hole is being analyzed against a type that is incompatible with $
   }
 \end{equation}
 
-Finally, the $\aConstruct{\fplus}$ action constructs a plus expression with the focused expression as its first argument. If the focused expression synthesizes a type consistent with $\tnum$, then the rule is straightforward:
+The $\aConstruct{\fplus}$ action constructs a plus expression with the expression under the cursor as its first argument. If that expression synthesizes a type consistent with $\tnum$, then the rule is straightforward:
 \begin{equation}\label{rule:construct-plus-compat}
   \inferrule{
     \tcompat{\htau}{\tnum}
@@ -1430,8 +1418,7 @@ Finally, the $\aConstruct{\fplus}$ action constructs a plus expression with the 
       {\tnum}
   }
 \end{equation}
-
-Otherwise, we must place the focused expression inside a hole:
+Otherwise, we must place that expression inside a hole:
 \begin{equation}
   \inferrule{
     \tincompat{\htau}{\tnum}
@@ -1445,13 +1432,38 @@ Otherwise, we must place the focused expression inside a hole:
       {\tnum}
   }
 \end{equation}
-\end{subequations}
-Notice that we do not have an action that explicitly wraps an expression in a non-empty hole. These arise implicitly when an action that would not na\"ively satisfy Theorem \ref{thrm:actsafe} is performed (see Figure \ref{fig:first-example}.)
+
+\paragraph{Non-Empty Holes} The final shape is $\fnehole$. This explicitly places the expression under the cursor inside a hole:
+\begin{equation}
+\inferrule{ }{
+  \performSyn
+    {\hGamma}
+    {\zwsel{\hexp}}
+    {\htau}
+    {\aConstruct{\fnehole}}
+    {\hhole{\zwsel{\hexp}}}
+    {\tehole}
+}
+\end{equation}\end{subequations}
+
+The $\fnehole$ shape is grayed out in Figure \ref{fig:action-syntax} because we do not expect the programmer to perform it explicitly -- other actions automatically insert holes when a type inconsistency would arise. Its inclusion is mainly to make it easier to state another ``checksum'' theorem: \emph{constructability}
+
+\paragraph{Constructability}
+To check that we have defined ``enough'' construct actions, we need to establish that we can start from an empty hole and arrive at any well-typed expression with, for simplicity, the cursor on the outside (Lemma \ref{lemma:reach-down} allows us to then move the cursor anywhere else.) As with reachability, we rely on the iterated action judgements defined in Figure \ref{fig:multistep}.
+\begin{theorem}[Constructability] ~
+\begin{enumerate}[itemsep=0px,partopsep=0px,topsep=0px]
+\item For every $\htau$ there exists $\bar\alpha$ such that $\performTyp{\zwsel{\tehole}}{\bar\alpha}{\zwsel{\htau}}$.
+\item If $\hana{\hGamma}{\hexp}{\htau}$ then there exists $\bar\alpha$ such that $\performAna{\hGamma}{\zwsel{\hhole{}}}{\htau}{\bar\alpha}{\zwsel{\hexp}}$.
+\item If $\hsyn{\hGamma}{\hexp}{\htau}$ then there exists $\bar\alpha$ such that $\performSyn{\hGamma}{\zwsel{\hhole{}}}{\tehole}{\bar\alpha}{\zwsel{\hexp}}{\htau}$.
+\end{enumerate}
+\end{theorem}
+
+Witnesses...\todo{talk about this}
 
 \subsubsection{Finishing}
-The final action we will consider in Hazelnut is $\aFinish$, which finishes the focused non-empty hole.
+The final action we need to consider is $\aFinish$, which finishes the non-empty hole under the cursor.
 
-If the focused non-empty hole appears in synthetic position, then it can always be finished:
+If the non-empty hole appears in synthetic position, then it can always be finished:
 \begin{subequations}
   \begin{equation}
   \inferrule{
@@ -1467,7 +1479,7 @@ If the focused non-empty hole appears in synthetic position, then it can always 
   }
 \end{equation}
 
-If the focused non-empty hole appears in analytic position, then it can only be finished if the type synthesized for the wrapped expression is consistent with the type the hole is being analyzed against. This amounts to analyzing those contents against the provided type (by subsumption):
+\todo{make sure there is no more compatibility or focus words}If the non-empty hole appears in analytic position, then it can only be finished if the type synthesized for the enveloped expression is consistent with the type that the hole is being analyzed against. This amounts to analyzing the enveloped expression against the provided type (by subsumption):
 \begin{equation}\label{r:finishana}
   \inferrule{
     \hana{\hGamma}{\hexp}{\htau}
@@ -1482,52 +1494,30 @@ If the focused non-empty hole appears in analytic position, then it can only be 
 \end{equation}
 \end{subequations}
 
-
-\paragraph{Constructibility}\todo{why is this with the zipper rules not the
-    construct rules?}
-
-We give the following theorem to demonstrate that the rules for the action
-$\aConstruct{\psi}$ do indeed capture the process of building any term
-of the form $\psi$. Intuitively, its proof gives a list of composable
-actions that, when applied one sequentially to an empty hole in focus,
-build any well-typed expression.
-
-As with Theorem \ref{thrm:reach}, the statement of this theorem must match
-the mutually recursive structure of the bidirectional typing judgements.
-
-\begin{theorem}[Constructability]\todo{why $\htau$ and not $\ztau$?}
-\label{thrm:construct}
-Both of the following hold:
-\begin{enumerate}
-  \item If $\hsyn{\hGamma}{\hexp}{\htau}$ then $\exists \zexp'$ $\exists
-      L \in \mathit{list} ~\mathtt{action}$ such that
-      $\mathit{iterate}~ L~ \zwsel{\hhole{}} = \zexp'$ and
-      $\removeSel{\zexp'} = \hexp$
-
-  \item If $\hana{\hGamma}{\hexp}{\htau}$ then $\exists \zexp'$ $\exists
-      L \in \mathit{list} ~\mathtt{action}$ such that $\mathit{iterate}~
-      L~ \zwsel{\hhole{}} = \zexp'$ and $\removeSel{\zexp'} = \hexp$
-\end{enumerate}
-\end{theorem}
-
-Because actions are defined on the zippered form of expressions, we argue
-that we can construct a term that is the same as the target up to the
-erasure of focus rather than on the nose. Since any form inside a zippered
-term may be in focus, there are linearly many such terms for a given
-$\hexp$---Theorem \ref{thrm:construct} can be composed with
-Theorem \ref{thrm:reach} to reach any one that might be desired in
-particular.
-
-\paragraph{Finishability}\todo{do we care?}
-As with deletion, since the meaning of the finish action does not depend on
-the structure of the term being finished other than requiring that it must
-be one of the two hole forms, there is no checksum theorem to state for
-this action.
-
-\subsubsection{Zipper Cases}\label{sec:zipper-cases} The rules given so far handle the base cases, where the action has ``reached'' the focused expression. We also need to define the recursive cases, which propagate the action into the subtree where the focus appears. These rules follow the structure of the corresponding rules in the statics of H-expressions.
+\subsubsection{Zipper Cases}\label{sec:zipper-cases} The rules defined so far handle the base cases, i.e. the cases where the action has ``reached'' the expression under the cursor. We also need to define the recursive cases, which propagate the action into the subtree where the cursor appears, as encoded by the zipper structure. These rules essentially follow the structure of the corresponding rules in the statics.
 
 \begin{subequations}
-For example, when the focus is in the expression position of an ascription, we use the analytic action performance judgement:
+For example, when the cursor is in the body of a lambda expression, the zipper case mirrors Rule (\ref{rule:syn-lam}):\todo{supp}
+\begin{equation}
+\inferrule{
+  \arrmatch{\htau}{\tarr{\htau_1}{\htau_2}}\\
+  \performAna
+    {\hGamma, x : \htau_1}
+    {\zexp}
+    {\htau_2}
+    {\alpha}
+    {\zexp'}
+}{
+  \performAna
+    {\hGamma}
+    {\hlam{x}{\zexp}}
+    {\htau}
+    {\alpha}
+    {\hlam{x}{\zexp'}}
+}
+\end{equation}
+
+When the cursor is in the expression position of an ascription, we use the analytic  judgement, mirroring Rule (\ref{rule:syn-asc}):
 \begin{equation}
 \inferrule{
   \performAna
@@ -1547,7 +1537,8 @@ For example, when the focus is in the expression position of an ascription, we u
 }
 \end{equation}
 
-When the focus is in the type position of an ascription, we must re-check the ascribed expression because the type might have changed (in practice, one would optimize this check to only occur if the type actually was changed):
+
+When the focus is in the type position of an ascription, we must re-check the ascribed expression because the cursor erasure might have changed (in practice, one would optimize this check to only occur if the cursor erasure did change):
 \begin{equation}
 \inferrule{
   \performTyp{\ztau}{\alpha}{\ztau'}\\
@@ -1563,26 +1554,8 @@ When the focus is in the type position of an ascription, we must re-check the as
 }
 \end{equation}
 
-If the focus is in the body of a lambda expression, then we must use the analytic action performance rule:
-\begin{equation}
-\inferrule{
-  \performAna
-    {\hGamma, x : \htau_1}
-    {\zexp}
-    {\htau_2}
-    {\alpha}
-    {\zexp'}
-}{
-  \performAna
-    {\hGamma}
-    {\hlam{x}{\zexp}}
-    {\tarr{\htau_1}{\htau_2}}
-    {\alpha}
-    {\hlam{x}{\zexp'}}
-}
-\end{equation}
 
-There are two rules that handle the case where the focus is in the function position of an application, corresponding to the two application rules in the statics. Each involves rechecking the argument against the new function type:
+When the cursor is in the function position of an application, the rule mirrors Rule (\ref{rule:syn-ap}):
 \begin{equation}
   \inferrule{
     \hsyn{\hGamma}{\removeSel{\zexp}}{\htau_2}\\
@@ -1592,8 +1565,9 @@ There are two rules that handle the case where the focus is in the function posi
       {\htau_2}
       {\alpha}
       {\zexp'}
-      {\tarr{\htau_3}{\htau_4}}\\
-    \hana{\hGamma}{\hexp}{\htau_3}
+      {\htau_3}\\\\
+    \arrmatch{\htau_3}{\tarr{\htau_4}{\htau_5}}\\
+    \hana{\hGamma}{\hexp}{\htau_4}
   }{
     \performSyn
       {\hGamma}
@@ -1601,72 +1575,73 @@ There are two rules that handle the case where the focus is in the function posi
       {\htau_1}
       {\alpha}
       {\hap{\zexp'}{\hexp}}
+      {\htau_5}
+  }
+\end{equation}
+% \begin{equation}
+%   \inferrule{
+%     \hsyn{\hGamma}{\removeSel{\zexp}}{\htau_2}\\
+%     \performSyn
+%       {\hGamma}
+%       {\zexp}
+%       {\htau_2}
+%       {\alpha}
+%       {\zexp'}
+%       {\tehole}\\
+%     \hana{\hGamma}{\hexp}{\tehole}
+%   }{
+%     \performSyn
+%       {\hGamma}
+%       {\hap{\zexp}{\hexp}}
+%       {\htau_1}
+%       {\alpha}
+%       {\hap{\zexp'}{\hexp}}
+%       {\tehole}
+%   }
+% \end{equation}
+
+The situation is similar when the cursor is in argument position:
+\begin{equation}
+  \inferrule{
+    \hsyn{\hGamma}{\hexp}{\htau_2}\\
+    \arrmatch{\htau_2}{\tarr{\htau_3}{\htau_4}}\\
+    \performAna
+      {\hGamma}
+      {\zexp}
+      {\htau_3}
+      {\alpha}
+      {\zexp'}
+  }{
+    \performSyn
+      {\hGamma}
+      {\hap{\hexp}{\zexp}}
+      {\htau_1}
+      {\alpha}
+      {\hap{\hexp}{\zexp'}}
       {\htau_4}
   }
 \end{equation}
-\begin{equation}
-  \inferrule{
-    \hsyn{\hGamma}{\removeSel{\zexp}}{\htau_2}\\
-    \performSyn
-      {\hGamma}
-      {\zexp}
-      {\htau_2}
-      {\alpha}
-      {\zexp'}
-      {\tehole}\\
-    \hana{\hGamma}{\hexp}{\tehole}
-  }{
-    \performSyn
-      {\hGamma}
-      {\hap{\zexp}{\hexp}}
-      {\htau_1}
-      {\alpha}
-      {\hap{\zexp'}{\hexp}}
-      {\tehole}
-  }
-\end{equation}
+% \begin{equation}
+%   \inferrule{
+%     \hsyn{\hGamma}{\hexp}{\tehole}\\
+%     \performAna
+%       {\hGamma}
+%       {\zexp}
+%       {\tehole}
+%       {\alpha}
+%       {\zexp'}
+%   }{
+%     \performSyn
+%       {\hGamma}
+%       {\hap{\hexp}{\zexp}}
+%       {\tehole}
+%       {\alpha}
+%       {\hap{\hexp}{\zexp'}}
+%       {\tehole}
+%   }
+% \end{equation}
 
-Similarly, there are two rules that handle the case where the focus is in the argument position:
-\begin{equation}
-  \inferrule{
-    \hsyn{\hGamma}{\hexp}{\tarr{\htau_2}{\htau}}\\
-    \performAna
-      {\hGamma}
-      {\zexp}
-      {\htau_2}
-      {\alpha}
-      {\zexp'}
-  }{
-    \performSyn
-      {\hGamma}
-      {\hap{\hexp}{\zexp}}
-      {\htau}
-      {\alpha}
-      {\hap{\hexp}{\zexp'}}
-      {\htau}
-  }
-\end{equation}
-\begin{equation}
-  \inferrule{
-    \hsyn{\hGamma}{\hexp}{\tehole}\\
-    \performAna
-      {\hGamma}
-      {\zexp}
-      {\tehole}
-      {\alpha}
-      {\zexp'}
-  }{
-    \performSyn
-      {\hGamma}
-      {\hap{\hexp}{\zexp}}
-      {\tehole}
-      {\alpha}
-      {\hap{\hexp}{\zexp'}}
-      {\tehole}
-  }
-\end{equation}
-
-The rules for the addition operator follow from the statics directly:
+The rules for the addition operator mirror Rule (\ref{rule:syn-plus}):
 \begin{equation}
   \inferrule{
     \performAna
@@ -1704,7 +1679,7 @@ The rules for the addition operator follow from the statics directly:
   }
 \end{equation}
 
-Finally, if the focus is inside a non-empty hole, we special case the situation where the action results in a doubly-nested empty hole, $\hhole{\hehole}$, to eliminate the nesting (given our current action semantics, only the delete action can cause this form to arise and the form $\hhole{\hhole{\zexp}}$ cannot arise):
+Finally, if the cursor is inside a non-empty hole, the relevant zipper rule mirrors Rule (\ref{rule:syn-ehole}):
 \begin{equation}
   \inferrule{
     \hsyn{\hGamma}{\removeSel{\zexp}}{\htau}\\
@@ -1715,7 +1690,6 @@ Finally, if the focus is inside a non-empty hole, we special case the situation 
       {\alpha}
       {\zexp'}
       {\htau'}\\
-    \zexp' \neq \zwsel{\hehole}
   }{
     \performSyn
       {\hGamma}
@@ -1726,26 +1700,26 @@ Finally, if the focus is inside a non-empty hole, we special case the situation 
       {\tehole}
   }
 \end{equation}
-\begin{equation}
-  \inferrule{
-    \hsyn{\hGamma}{\removeSel{\zexp}}{\htau}\\
-    \performSyn
-      {\hGamma}
-      {\zexp}
-      {\htau}
-      {\alpha}
-      {\zwsel{\hehole}}
-      {\tehole}\\
-  }{
-    \performSyn
-      {\hGamma}
-      {\hhole{\zexp}}
-      {\tehole}
-      {\alpha}
-      {\zwsel{\hehole}}
-      {\tehole}
-  }
-\end{equation}
+% \begin{equation}
+%   \inferrule{
+%     \hsyn{\hGamma}{\removeSel{\zexp}}{\htau}\\
+%     \performSyn
+%       {\hGamma}
+%       {\zexp}
+%       {\htau}
+%       {\alpha}
+%       {\zwsel{\hehole}}
+%       {\tehole}\\
+%   }{
+%     \performSyn
+%       {\hGamma}
+%       {\hhole{\zexp}}
+%       {\tehole}
+%       {\alpha}
+%       {\zwsel{\hehole}}
+%       {\tehole}
+%   }
+% \end{equation}
 
-
+Theorem \ref{thrm:actsafe} directly checks the correctness of these rules. Moreover, the zipper rules arise ubiquitously in derivations of edit steps, so the proofs of the other ``check'' theorems, e.g. Reachability and Constructability, serve as a check that none of these rules have been missed.
 \end{subequations}
