--- a/agda.tex
+++ b/agda.tex
@@ -1,42 +1,28 @@
 % !TEX root = hazelnut-popl17.tex
-In the previous section, we gave an overview of the most important rules in
-the semantics of Hazelnut, and stated the important theorems. In a few
-cases, we sketched out why these theorems will hold.
-
-In order to formally verify that our design meets the stated objectives, we
-are preparing a formalization of the grammar, the judgements given above
-and the metatheory in the proof assistant Agda \cite{norell:thesis}. We
+So far, we have given an overview of the most important judgements and rules in
+the semantics of Hazelnut, and stated the important metatheorems. In a few
+cases, we have informally sketched out why these metatheorems will hold. In order to formally establish that our design meets our stated objectives, we
+have mechanized the semantics and metatheory of Hazelnut using the Agda proof assistant \cite{norell:thesis}. We 
 refer readers unfamiliar with Agda to the Agda Wiki, hosted
 at \url{http://wiki.portal.chalmers.se/agda/}.
 
-Our formalization of Hazelnut is under development at
-\url{http://github.com/hazelgrove/agda-tfp16}. At the time of submission, we 
-have completed much of the initial groundwork, but the proofs of 
-Theorem \ref{thrm:actsafe} and Theorem \ref{thrm:actdet} (and a few  
-lemmas that we elided here) are under construction.  
+This development is available in the supplemental material. At the time of submission, all of the rules as well as the proofs of Theorem \ref{thrm:actsafe} and Theorem \ref{thrm:actdet} (including the proofs a number of technical lemmas that we elided here) are complete.\todo{rest of it}
 
 The documentation 
 includes a more detailed discussion of the technical representation
-decisions made. The core idea of our formalization is to encode each judgement as a
-dependent type. The rules of the judgements become the constructors of the
-type, and derivations of theorems values of the type. This is a rich
+decisions that we made. The main idea is standard: we encode each judgement as a
+dependent type. The rules defining the judgements become the constructors of this
+type, and derivations are terms of these type. This is a rich
 setting that allows proofs to take advantage of pattern matching on the
-shape of derivations, closely matching on-paper proofs of similar
-properties.
-
-The formalization differs from the calculus defined here in a few small 
-ways. Most interestingly, instead of giving separate movement rules for each 
-form of Z-expression, we abstract
-over different corresponding forms that happen to have the same arity, e.g. 
-additions and applications. Formalizing this intuition
-reduces the number of cases we need to consider 
-somewhat, but more importantly allows us to write a slightly more
-general calculus -- it will be easier to extend Hazelnut with more 
-interesting language features with this generic infrastructure in place.
-
-Because the metatheory in this paper is largely concerned with the statics
-of Hazelnut rather than its dynamics, we adopt Barendregt's convention for
-bound variables and avoid substitution entirely \cite{urban}. Future
-iterations will need a more mature technique for reasoning about
-binding---likely de Bruijn indices or abstract binding
-trees \cite{lh09unibind,Pouillard11}. 
+shape of derivations, closely matching standard on-paper proofs. No proof automation was used, because the proof structure itself is likely to be interesting to researchers who plan to build upon our work. 
+% The formalization differs from the calculus defined here in a few small 
+% ways. Most interestingly, instead of giving separate movement rules for each 
+% form of Z-expression, we abstract
+% over different corresponding forms that happen to have the same arity, e.g. 
+% additions and applications. Formalizing this intuition
+% reduces the number of cases we need to consider 
+% somewhat, but more importantly allows us to write a slightly more
+% general calculus -- it will be easier to extend Hazelnut with more 
+% interesting language features with this generic infrastructure in place.
+We adopt Barendregt's convention for
+bound variables \cite{urban}. Hazelnut's semantics does not need substitution, so we do not need to adopt more sophisticated encodings (e.g. \cite{lh09unibind,Pouillard11}.)
