tweaked title linebreak spacing; updated colors and stroke for hazel

--- a/hazelnut-popl17.tex
+++ b/hazelnut-popl17.tex
@@ -89,8 +89,9 @@ basicstyle=\ttfamily\fontsize{8pt}{1em}\selectfont}
 %\titlebanner{}        % These are ignored unless
 \preprintfooter{Draft}   % 'preprint' option specified.
 
-\title{Hazelnut: A Bidirectionally Typed \\ Structure Editor
- Calculus}
+%% \title{Hazelnut: A Bidirectionally Typed \\ Structure Editor
+%%  Calculus}
+\title{Hazelnut:\\A Bidirectionally Typed Structure Editor Calculus}
 
 %\authorinfo{\vspace{-2px}}{}{}
 \authorinfo{~}{~}{\vspace{-10px}}
