--- a/implementation.tex
+++ b/implementation.tex
@@ -2,7 +2,7 @@
 
 \begin{figure}
 \centering
-\includegraphics[width=0.90\columnwidth]{impl-overview}
+\includegraphics[width=0.90\columnwidth]{impl-overview2}
 \caption{}
 \label{fig:impl-overview}
 \end{figure}
